@@ -1,3 +1,8 @@
+2006-06-09  Tom Tromey  <tromey@redhat.com>
+
+	* gjavah.c (decompile_method): Don't decompile a static field
+	accessor method.
+
 2006-06-06  Tom Tromey  <tromey@redhat.com>
 
 	* lang-specs.h <jc1>: Add .jar file to command line if
